--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=7.1",
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "dmstr/yii2-adminlte-asset": "^2.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
