add noty assets

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         "kartik-v/yii2-field-range": "*",
         "paulzi/yii2-nested-sets": "^1.0",
         "yii-dream-team/yii2-upload-behavior": "^1.1",
+        "loveorigami/yii2-notification-wrapper": "*",
+        "bower-asset/noty": "^2.3",
+        "bower-asset/jquery-growl": "^1.3",
         "bower-asset/font-awesome": "^4.7",
         "bower-asset/owl.carousel": "^2.2",
         "bower-asset/magnific-popup": "^1.1",
