--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "flow/jsonpath": "^0.3.4",
         "drewm/mailchimp-api": "^2.4",
         "yiisoft/yii2-redis": "^2.0",
-        "zhuravljov/yii2-queue": "^1.0",
+        "yiisoft/yii2-queue": "^1.0",
         "league/flysystem": "^1.0"
     },
     "require-dev": {
