--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -7,11 +7,11 @@ server {
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
    server_name shop.dev;
-   root        /app/frontend/web/;
+   root        /home/mix/www/yii2-shop/frontend/web/;
    index       index.php;
 
-   access_log  /app/vagrant/nginx/log/frontend-access.log;
-   error_log   /app/vagrant/nginx/log/frontend-error.log;
+   access_log  /home/mix/www/yii2-shop/vagrant/nginx/log/frontend-access.log;
+   error_log   /home/mix/www/yii2-shop/vagrant/nginx/log/frontend-error.log;
 
    location / {
        # Redirect everything that isn't a real file to index.php
@@ -46,11 +46,11 @@ server {
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
    server_name backend.shop.dev;
-   root        /app/backend/web/;
+   root        /home/mix/www/yii2-shop/backend/web/;
    index       index.php;
 
-   access_log  /app/vagrant/nginx/log/backend-access.log;
-   error_log   /app/vagrant/nginx/log/backend-error.log;
+   access_log  /home/mix/www/yii2-shop/vagrant/nginx/log/backend-access.log;
+   error_log   /home/mix/www/yii2-shop/vagrant/nginx/log/backend-error.log;
 
    location / {
        # Redirect everything that isn't a real file to index.php
@@ -85,11 +85,11 @@ server {
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
    server_name api.shop.dev;
-   root        /app/api/web/;
+   root        /home/mix/www/yii2-shop/api/web/;
    index       index.php index.html;
 
-   access_log  /app/vagrant/nginx/log/api-access.log;
-   error_log   /app/vagrant/nginx/log/api-error.log;
+   access_log  /home/mix/www/yii2-shop/vagrant/nginx/log/api-access.log;
+   error_log   /home/mix/www/yii2-shop/vagrant/nginx/log/api-error.log;
 
    location / {
        # Redirect everything that isn't a real file to index.php
@@ -124,9 +124,9 @@ server {
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
    server_name static.shop.dev;
-   root        /app/static/;
+   root        /home/mix/www/yii2-shop/static/;
 
-   error_log   /app/vagrant/nginx/log/static-error.log;
+   error_log   /home/mix/www/yii2-shop/vagrant/nginx/log/static-error.log;
 
    location ~ /\.(ht|svn|git) {
        deny all;
