--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -6,7 +6,7 @@ server {
    listen 80; ## listen for ipv4
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-   server_name shop.dev;
+   server_name shop.test;
    root        /app/frontend/web/;
    index       index.php;
 
@@ -45,7 +45,7 @@ server {
    listen 80; ## listen for ipv4
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-   server_name backend.shop.dev;
+   server_name backend.shop.test;
    root        /app/backend/web/;
    index       index.php;
 
